@@ -66,16 +66,16 @@ extern const char *const lose_msg[NUM_STATS];
 typedef struct liv {
     sint8         Str, Dex, Con, Wis, Cha, Int, Pow;
     sint8         wc, ac;     /**< Weapon Class and Armour Class */
+    sint8         luck;       /**< Affects thaco and ac from time to time */
     sint16        hp;         /**< Hit Points. */
     sint16        maxhp;      /**< Max hit points. */
     sint16        sp;         /**< Spell points.  Used to cast mage spells. */
     sint16        maxsp;      /**< Max spell points. */
     sint16        grace;      /**< Grace.  Used to invoke clerical prayers. */
     sint16        maxgrace;   /**< Grace.  Used to invoke clerical prayers. */
-    sint32        food;       /**< How much food in stomach.  0 = starved. */
-    sint64        exp;        /**< Experience.  Killers gain 1/10. */
     sint16        dam;        /**< How much damage this object does when hitting */
-    sint8         luck;       /**< Affects thaco and ac from time to time */
+    sint64        exp;        /**< Experience.  Killers gain 1/10. */
+    sint32        food;       /**< How much food in stomach.  0 = starved. */
 } living;
 
 float get_cha_bonus(int stat);
